# forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASING.md  SECURITY.md  UPGRADING.md  install  multi-backend.yaml  package.json  pyproject.toml
.github/: dependabot.yml
docs/: DEPLOYMENT.md  FEATURES.md  GETTING_STARTED.md  MAINTAINER_ONBOARDING.md  OPERATIONAL_RUNBOOK.md  SDK_CHANGELOG.md  adding-a-backend.md  adding-a-frontend.md  architecture.md  auth-architecture.md  coverage-policy.md  frontend-layouts.md  known-issues.md  matrix-status.md  mcp.md  mutation-testing.md  platform-generator-guide.md  plugin-development.md  round-trip.md  telemetry.md  testing-generated-backends.md  troubleshooting.md
examples/forge-go-backend/: README.md  pyproject.toml
examples/forge-go-backend/src/forge_go_backend/: __init__.py  toolchain.py
examples/forge-go-backend/src/forge_go_backend/go-service-template/: _forge_template.toml  copier.yml
examples/forge-go-backend/src/forge_go_backend/go-service-template/template/: .env.example  .gitignore.jinja  Dockerfile.jinja  README.md.jinja  docker-compose.fragment.yaml.jinja  go.mod.jinja  main.go.jinja  main_test.go.jinja
examples/forge-vite-frontend/: README.md  pyproject.toml
examples/forge-vite-frontend/src/forge_vite_frontend/: __init__.py
examples/forge-vite-frontend/src/forge_vite_frontend/vite-frontend-template/: _forge_template.toml  copier.yml
examples/forge-vite-frontend/src/forge_vite_frontend/vite-frontend-template/template/: README.md.jinja  package.json.jinja  vite.config.ts.jinja
examples/forge-vite-frontend/src/forge_vite_frontend/vite-frontend-template/template/src/: main.ts.jinja
forge/: __init__.py  api.py  backend_app_templates.py  capability_resolver.py  cli.py  common_files.py  config.py  docker_manager.py  doctor.py  e2e_templates.py  errors.py  feature_injector.py  feature_loader.py  feature_manifest.py  features.py  forge_toml.py  fragment_context.py  fragments.py  frontends.py  generator.py  hooks.py  layout_variants.py  logging.py  merge.py  middleware_spec.py  options.py  plan_validator.py  platform_templates.py  plugins.py  provenance.py  service_registration.py  strippers.py  telemetry.py  uninstaller.py  updater.py  variable_mapper.py  verify.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/: .gitignore  Dockerfile  README.md  pyproject.toml
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/config/: production.yaml  secrets.production.yaml.example  staging.yaml
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/scripts/: keygen.py  realm_sync.py  validate_internal.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/src/app/: main.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/src/app/api/v1/endpoints/: home.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/src/app/cli/: __init__.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/src/app/core/config/: domain.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/src/app/gatekeeper/: __init__.py  apikeys.py  config.py  delegation_grant.py  helpers.py  internal_token.py  internal_token_cache.py  jwks.py  key_store.py  keycloak_admin.py  metrics.py  oidc.py  oidc_pkce.py  realm_invariants.py  redis.py  routes.py  routes_session.py  scopes.py  server_session.py  service_registry.py  service_token.py  tenant_config.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/src/app/middleware/: api_version.py  logging.py  security_headers.py
forge/features/auth/templates/platform_auth_gatekeeper/all/files/deploy/infra/gatekeeper/src/app/observability/: json_logging.py  metrics.py  tracing.py
forge/templates/gatekeeper/: Dockerfile  README.md  pyproject.toml
forge/templates/gatekeeper/config/: default.yaml  development.yaml
forge/templates/gatekeeper/src/app/core/: errors.py  lifecycle.py
forge/templates/gatekeeper/src/app/core/config/: domain.py  sources.py
forge/templates/gatekeeper/src/app/gatekeeper/: apikeys.py  apikeys_api.py  config.py  helpers.py  http_client.py  jwks.py  metrics.py  routes.py  tenant_config.py
forge/templates/services/python-service-template/template/sdks/forge-core/: pyproject.toml
forge/templates/services/python-service-template/template/sdks/forge-core/src/forge_core/: __init__.py  discovery.py  errors.py
forge/templates/services/python-service-template/template/sdks/forge-core/src/forge_core/api/: __init__.py  filtering.py  pagination.py
forge/templates/services/python-service-template/template/sdks/forge-core/src/forge_core/domain/: __init__.py  account.py  config.py  context.py  user.py
forge/templates/services/python-service-template/template/sdks/forge-core/src/forge_core/observability/: __init__.py  correlation.py
forge/templates/services/python-service-template/template/sdks/forge-core/src/forge_core/persistence/: __init__.py  account.py  config.py  database.py  mixins.py  repository.py  unit_of_work.py
forge/templates/services/python-service-template/template/sdks/forge-core/src/forge_core/security/: __init__.py  auth.py  exceptions.py  guard.py  identity.py  jwks.py  platform_auth_setup.py  s2s.py  scopes.py  trust.py
forge/templates/services/python-service-template/template/sdks/forge-core/tests/unit/: test_api.py  test_discovery.py  test_domain.py  test_errors.py  test_observability.py  test_persistence.py  test_persistence_internals.py  test_s2s.py  test_security.py
plans/: 2026-05-19-forge-ci-health-plan.md  2026-05-19-matrix-nightly-fixes-plan.md  2026-05-21-canvas-core-impl-review.md  2026-05-21-forge-canvas-core-dart-impl-review.md  2026-05-21-svelte-mcp-iframe-impl-review.md  2026-05-22-applier-registry-impl-review.md  2026-05-22-cache-port-impl-review.md  (+19 more)
(+1656 files in other folders)
