[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
dynamic = ["version"]
description = "CLI tool to generate and orchestrate full-stack projects."
requires-python = ">=3.13"
dependencies = [
    "copier>=9.15.1",
    "questionary>=2.0.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0",
    "tomlkit>=0.15.0",
    "libcst>=1.8.6",
    # Theme 5 — typed orchestration boundary. Pydantic v2 was previously
    # transitively present via copier; declaring it explicitly so the
    # typed_config module's dependency surface is honest.
    "pydantic>=2.0",
    # v2 Theme 3B — tree-sitter-rust drives the Rust path of
    # ``forge.codegen.literal_finder``. Declared as a runtime dep (not
    # dev-only) because the harvester invokes the finder during normal
    # ``forge sync`` runs on Axum/other Rust targets.
    "tree-sitter>=0.25.2",
    "tree-sitter-rust>=0.24.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0",
    "ruff>=0.15.14",
    # ty is pinned to an exact alpha until a ty-upgrade PR lands (Epic X).
    # Astral ships breaking changes between alphas (the 0.0.1a7 in the old
    # `>=` constraint didn't even know about `[tool.ty.src].include`); a
    # passing canary run is the precondition for bumping this pin. See
    # .github/workflows/ty-upgrade.yml and tests/test_ty_canary.py for the
    # upgrade dance.
    "ty==0.0.37",
    "pre-commit>=4.6.0",
    "hypothesis>=6.152.2",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.dynamic]
version = {attr = "forge.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]

[tool.setuptools.package-data]
"forge.templates" = ["**/*"]
# Built-in feature subpackages (forge/features/<name>/) colocate template
# trees alongside their Python registration modules — same convention
# third-party plugins use. Wheels need these globbed in or the bundled
# fragments are lost on `pip install forge` (editable installs ship them
# automatically from the source tree).
"forge.features" = ["**/templates/**/*"]
# `forge --plugins scaffold-fragment` renders these Jinja templates into
# the plugin author's workspace. Wheels need them globbed in or the
# command can't find its skeleton on a non-editable install.
"forge.cli.scaffold" = ["**/*.jinja"]

# Epic DD (1.1.0-alpha.1) — keep wheel's forge/templates/ clean. The
# `**/*` include above is generous so fragments can ship any file type;
# this companion exclude drops caches + build output that occasionally
# accumulate in the live working tree. Keep in sync with MANIFEST.in.
[tool.setuptools.exclude-package-data]
"forge.templates" = [
    "**/__pycache__/*",
    "**/.mypy_cache/*",
    "**/.ruff_cache/*",
    "**/.pytest_cache/*",
    "**/node_modules/*",
    "**/.venv/*",
    "**/htmlcov/*",
    "**/.next/*",
    "**/.svelte-kit/*",
    "**/.dart_tool/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
]
"forge.features" = [
    "**/__pycache__/*",
    "**/.mypy_cache/*",
    "**/.ruff_cache/*",
    "**/.pytest_cache/*",
    "**/node_modules/*",
    "**/.venv/*",
    "**/htmlcov/*",
    "**/.next/*",
    "**/.svelte-kit/*",
    "**/.dart_tool/*",
    # Cargo build output from the auth Rust SDK's cross-SDK parity gate.
    # Without this exclude, the cargo target/ tree (which the parity gate
    # leaves behind when run before the package-integrity gate) gets
    # included in the sdist + wheel, blowing past Windows MAX_PATH and
    # causing ``uv build`` to time out after 5 min on CI.
    "**/target/*",
    "**/target/**/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"
markers = [
    "e2e: end-to-end tests that scaffold a project and run its native test suite (slow, opt-in via -m e2e)",
    "package_integrity: assert the uv-built sdist + wheel contain every template file and no cache contamination (slow, opt-in via -m package_integrity; CI runs as a separate job)",
    "fuzz: Hypothesis-driven fuzz tests for resolver combinations (slower, opt-in via -m fuzz; CI runs nightly)",
    "golden_snapshot: full forge generation per preset; deterministic across OS+Python so CI runs them on a single matrix cell only (the coverage job)",
    "plugin_e2e: end-to-end tests that require examples/forge-plugin-example to be pip-installed; opt-in via -m plugin_e2e (CI runs as a dedicated job, see .github/workflows/plugin-e2e.yml)",
    "bench: lightweight performance bench tests (time.perf_counter-based budgets); opt-in via -m bench. Establishes a measurement floor for the merge-mode hot paths so a future PR can ratchet absolute thresholds.",
]
filterwarnings = [
    # Epic S (1.1.0-alpha.1): internal modules still import GeneratorError
    # while the rename to ForgeError migrates through. Silencing here keeps
    # the test suite quiet without masking external callers — third-party
    # code still sees the deprecation when they import.
    "ignore:forge\\.errors\\.GeneratorError is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["forge"]
omit = [
    "forge/templates/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# Project-wide floor (Epic S, 1.1.0-alpha.1). Measured baseline at the start
# of Epic S was 83.5% — the original 75 figure is honest and actively being
# met; the roadmap's 26% number was stale. The gate stays at 75 as the
# coarse safety net. Finer-grained critical-path floors live in
# `tests/test_coverage_gates.py`; those are the ones that bite when someone
# touches sync/merge, sync/provenance, appliers/, the injectors, or the
# sync/forge_to_project/updater/ package (post-Epic-A decomposition of the
# legacy feature_injector + updater modules).
#
# Policy: each sprint's coverage PR ratchets the critical-path floors upward
# toward the targets in docs/coverage-policy.md. Lowering any floor requires
# a CHANGELOG note + RFC-002 justification.
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"


# Mutation testing via mutmut. Scoped to the fragment-injection critical
# path (appliers/, sync/merge, sync/provenance, sync/forge_to_project/updater/,
# injectors/) where silent regressions would bite generated projects on every
# `forge --update`. The pre-Epic-A `forge/feature_injector.py`, `forge/merge.py`,
# `forge/provenance.py`, and `forge/updater.py` paths were decomposed into the
# packages below; mutmut silently no-ops on missing paths so the list is kept
# in sync with the live tree.
# Run with `uvx mutmut run` and inspect with `uvx mutmut results`.
[tool.mutmut]
paths_to_mutate = [
    "forge/appliers/injection.py",
    "forge/appliers/plan.py",
    "forge/sync/merge.py",
    "forge/sync/provenance.py",
    "forge/injectors/python_ast.py",
    "forge/injectors/ts_ast.py",
    "forge/sync/forge_to_project/updater/__init__.py",
    "forge/sync/forge_to_project/updater/_merge_driver.py",
    "forge/sync/forge_to_project/updater/_template_render.py",
]
tests_dir = "tests/"
runner = "uv run pytest -x --no-cov -q"
# Skip mutations inside lexical strings — template snippets / error
# messages / docstrings changing doesn't change behavior forge depends on.
also_copy = ["tests/"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["forge"]
# Exclude both the legacy top-level template tree and the colocated
# feature template trees under forge/features/<name>/templates/. Those
# contain *scaffold sources* that import the generated project's
# namespace (``app.*``, third-party deps that aren't forge's own deps);
# type-checking them as forge source produces hundreds of false
# unresolved-import errors and has no signal value.
exclude = [
    "forge/templates",
    "forge/features/*/templates",
    "**/__pycache__",
    "**/.venv",
]

[tool.ty.rules]
unresolved-import = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
missing-argument = "error"
unknown-argument = "error"

[tool.ruff]
line-length = 100
target-version = "py313"
# Mirror [tool.ty.src].exclude — the colocated feature template trees under
# forge/features/<name>/templates/ contain scaffold sources that import the
# generated project's namespace (``app.*`` and third-party deps that aren't
# forge's own deps); ruff lints them as forge source and surfaces
# template-only violations (I001, UP037, F541) that don't apply in context.
# The ty exclude landed in 7356792; this matches it for ruff.
exclude = [
    "forge/templates",
    "forge/features/*/templates",
    ".venv",
    "build",
    "dist",
    "htmlcov",
    "**/__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in argument default — common in argparse helpers
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
