[project]
name = "forge-core"
version = "0.1.0"
description = "Vendored framework-agnostic primitives (errors, persistence, domain, discovery, security) for forge services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.0",
    # security — generic FastAPI auth glue (oauth2_scheme + AuthGuard + JWKS
    # verify). FastAPI for the request-lifecycle types, httpx for the JWKS
    # fetch, PyJWT for token decode + JWK parsing.
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "PyJWT>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "aiosqlite>=0.20.0",
    # cryptography — mint ES256 / RS256 keypairs + sign test JWTs for the
    # forge_core.security verifier suite (JWKS happy-path / expired / bad-aud).
    "cryptography>=42.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=forge_core --cov-report=term-missing --cov-branch"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
]

[tool.coverage.run]
source = ["src/forge_core"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]
